[gd_scene load_steps=2 format=3 uid="uid://ccsm0u64dhggx"]

[ext_resource type="Script" uid="uid://o0ulqpioka8r" path="res://Scripts/game_ui.gd" id="1_ui"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ui")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="LeftPanel" type="VBoxContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScoreLabel" type="Label" parent="TopBar/LeftPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 48
text = "Score: 0 / 500"

[node name="RoundLabel" type="Label" parent="TopBar/LeftPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Round: 1/3"

[node name="RightPanel" type="VBoxContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="DeckLabel" type="Label" parent="TopBar/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 32
text = "Deck: 75/75"
horizontal_alignment = 2

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="DealButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "DEAL BALL"

[node name="Spacer" type="Control" parent="BottomBar"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="ScoreButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SCORE HAND"

[node name="InfoPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -250.0
offset_right = -20.0
offset_bottom = -120.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="InfoPanel"]
layout_mode = 2

[node name="NameLbl" type="Label" parent="InfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Ball Name"

[node name="TypeLbl" type="Label" parent="InfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Rarity"

[node name="DescLbl" type="Label" parent="InfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Description"
autowrap_mode = 3

[connection signal="pressed" from="BottomBar/DealButton" to="." method="_on_deal_button_pressed"]
[connection signal="pressed" from="BottomBar/ScoreButton" to="." method="_on_score_button_pressed"]
